--- a/src/source/css/home.css
+++ b/src/source/css/home.css
@@ -1,12 +1,41 @@
 /*home.css*/
-.title {
-	font-size: 36px;
-	line-height: 36px;
-	font-weight: normal;
+.header {
+	height: 80px;
 	margin-bottom: 30px;
-	color: #333;
+	background-color: rgba(0,0,0,.03);
+	box-shadow: 0 0 20px rgba(0,0,0,.25);
+}
+.header>h1 {
+	font-size: 36px;
+	line-height: 80px;
+	font-weight: normal;
+	text-align: center;
+}
+.selectNav {
+	width: 100%;
+	height: 80px;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+}
+.selectNav>li {
+	display: inline-block;
+	width: 50%;
+	height: 100%;
+}
+.selectNav>li+li { border-left: 1px solid #ddd;}
+.selectNav>li>a {
+	display: block;
+	height: 100%;
+	font-size: 28px;
+	text-align: center;
+	line-height: 78px;
+	color: #666;
+}
+.activeLink {
+	background-color: #fff;
 }
 
+/*searchAdd*/
 .inputBox {
 	position: relative;
 	font-size: 0;
@@ -64,4 +93,30 @@
 	font-size: 28px;
 	line-height: 48px;
 	color: #666;
+}
+
+/*clickAdd*/
+.clickTitle {
+	font-size: 30px;
+	font-weight: normal;
+	margin-bottom: 20px;
+}
+.listOuter {
+	margin-bottom: 40px;
+}
+.cityPill {
+	display: inline-block;
+	outline: none;
+	padding: 10px 40px;
+	border: 1px solid #2591ff;
+	border-radius: 25px;
+	background-color: #fff;
+	font-size: 24px;
+	line-height: 28px;
+	box-shadow: none;
+	margin: 0 10px 15px
+}
+.activePill {
+	background-color: #2591ff;
+	color: #fff;
 }
