--- a/src/source/css/result.css
+++ b/src/source/css/result.css
@@ -21,3 +21,17 @@
 	margin-top: 30px;
 	background: url(../images/back.png) no-repeat center;
 }
+
+.wrong {
+	font-size: 50px;
+	font-weight: 200;
+	text-align: center;
+	margin-bottom: 30px;
+}
+.backLink {
+	color: #00f;
+	display: block;
+	font-size: 30px;
+	line-height: 60px;
+	text-align: center;
+}
